--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog</title>
+    <meta name="description" content="Welcome to my website, a space to share my portfolio, background, and contact information.">
+    <title>My Website</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -14,28 +15,19 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Me</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="resources.html">Resources</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <h2>Blog</h2>
-        <article>
-            <h3>Article Title 1</h3>
-            <p>Here's an example of a blog post. You can add more articles by copying this structure and changing the text.</p>
-        </article>
-
-        <article>
-            <h3>Article Title 2</h3>
-            <p>This could be another article about a different topic or insight you'd like to share.</p>
-        </article>
+        <h1>Welcome to My Website!</h1>
+        <p>This is the homepage. Explore my background, projects, and get in touch.</p>
+        <a href="https://www.example.com" target="_blank">Visit an external link</a>
     </main>
 
     <footer>
-        <p>&copy; 2024 My Website</p>
+        <p>&copy; 2024 My Website | <a href="mailto:youremail@example.com">Contact Me</a></p>
     </footer>
 </body>
 </html>
