--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Welcome to my website, a space to share my portfolio, background, and contact information.">
+    <meta name="description" content="Welcome to my website.">
     <title>My Website</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <div class="logo">My Logo</div>
+        <div class="logo">Omar Mohamed</div>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -22,12 +22,11 @@
 
     <main>
         <h1>Welcome to My Website!</h1>
-        <p>This is the homepage. Explore my background, projects, and get in touch.</p>
-        <a href="https://www.example.com" target="_blank">Visit an external link</a>
+        <p>Get to know me by exploring my background, projects, and how to get in touch.</p>
     </main>
 
     <footer>
-        <p>&copy; 2024 My Website | <a href="mailto:youremail@example.com">Contact Me</a></p>
+        <p>&copy; 2024 My Website | <a href="mailto:mohamed5@memphis.edu">Contact Me</a></p>
     </footer>
 </body>
 </html>
