--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <div class="logo">My Logo</div>
+        <div class="logo">Omar Mohamed</div>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -21,7 +21,10 @@
 
     <main>
         <h2>About Me</h2>
-        <p>Here's some information about my background, interests, and skills.</p>
+        <p>Here's some information about my background, interests, and hobbies</p>
+        <p>My background is that I am from Ethiopia and I am currently a student at the University of Memphis pursuing a degree in Computer Science.</p>
+        <p>My top favorite interest is learning how the internet works.</p>
+        <p>My top favorite hobby is soccer.</p>
     </main>
 
     <footer>
