--- a/contact.html
+++ b/contact.html
@@ -21,18 +21,8 @@
 
     <main>
         <h2>Contact Me</h2>
-        <form action="https://www.formbuddy.com" method="POST">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required>
-            
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
-
-            <label for="message">Message:</label>
-            <textarea id="message" name="message" required></textarea>
-
-            <button type="submit">Send</button>
-        </form>
+        <p>Name: Omar Mohamed</p>
+        <p>Email: mohamed5@memphis.edu</p>
     </main>
 
     <footer>
