--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <div class="logo">My Logo</div>
+        <div class="logo">Omar Mohamed</div>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -28,11 +28,15 @@
                 <th>Date</th>
             </tr>
             <tr>
-                <td>Project 1</td>
-                <td>Details about project 1.</td>
-                <td>2024</td>
+                <td>Poker Game</td>
+                <td>Made a playable poker game with python.</td>
+                <td>2022</td>
             </tr>
-            <!-- Add more rows as needed -->
+            <tr>
+                <td>Tic-Tac-Toe</td>
+                <td>Made a Tic-Tac-Toe game with a bot that never loses</td>
+                <td>2023</td>
+            </tr>
         </table>
     </main>
 
