--- a/resource.html
+++ b/resource.html
@@ -14,7 +14,6 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Me</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="blog.html">Blog</a></li>
                 <li><a href="resources.html">Resources</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -24,9 +23,8 @@
     <main>
         <h2>Resources</h2>
         <ul>
-            <li><a href="https://www.example.com" target="_blank">Resource 1</a> - Description of why this is a useful resource.</li>
-            <li><a href="https://www.anotherexample.com" target="_blank">Resource 2</a> - Another great resource to check out.</li>
-            <!-- Add more resources as needed -->
+            <li><a href="https://www.youtube.com/watch?v=p1QU3kLFPdg" target="_blank">Resource 1</a> - Basic understanding and how to uplod website on GitHub.</li>
+            <li><a href="https://www.youtube.com/watch?v=PlxWf493en4" target="_blank">Resource 2</a> - How to make html files and code.</li>
         </ul>
     </main>
 
